# RapidSIFT

./: .gitignore  AdaptiveNMS.cpp  AdaptiveNMS.cu  AdaptiveNMS.h  CMakeLists.txt  KArray.h  Octave.cpp  Octave.h  Pitched2DTexture.h  RapidSift.cpp  RapidSift.h  SIFT_worker.cpp  SIFT_worker.h  TexObj.h  ThreadPool.h  conv1d.h  cuda_async_copy_engine.h  fp16.h  kernel_DoG.cu  kernel_assign_orientation.cu  kernel_describe.cu  kernel_find_keypoints.cu  kernel_makePatch.cu  kernels.cpp  kernels.h  main.cpp  public_types.h  sift_master.cpp  sift_master.h  solve_GaussElim.h  texture_test.cu  types.h  utils.cpp  utils_host.h  utils_sift.h
filter/: PropagationMatchFilter.cpp  PropagationMatchFilter.h  geometry.cpp  geometry.h  gms_matcher.h  ransac.hpp  robust_gms_matcher.cpp  robust_gms_matcher.h  types.h  utils_sfm.h
tests/: AdaptiveNMSTest.cpp  DoG_test.cpp  find_keypoints_test.cpp  solve_GaussElim_test.cpp  test_main.cpp
